--- a/src/main/resources/static/web/account.html
+++ b/src/main/resources/static/web/account.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 <body>
     <style>
         [v-cloak] {
-            display: inline ;
+            display: none;
         }
     </style>
     <div id="app" v-cloak>
@@ -69,7 +69,7 @@
                         </ul>
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
-                            <button class="btn btn-danger img-fluid">Sign out</button>
+                            <button class="btn btn-danger img-fluid" v-on:click="signOut">Sign out</button>
                         </ul>
                     </div>
                 </div>
@@ -81,8 +81,8 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col">
-                            <h2 class="display-6 account">Account Number: {{ account.number }} - Balance: ${{
-                                account.balance }} </h2>
+                            <h2 class="display-6 account">Account Number: {{ accountInfo.number }} - Balance: ${{
+                                accountInfo.balance }}</h2>
                         </div>
                     </div>
                     <div class="row mt-3">
@@ -91,14 +91,14 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th>Nº</th>
+                                        <th>id</th>
                                         <th>Description</th>
                                         <th>Date</th>
                                         <th>Amount</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr v-for="(transaction, index) in account.transactions"
+                                    <tr v-for="(transaction, index) in accountInfo.transactions"
                                         v-bind:class="[ transaction.type == 'CREDIT' ? 'credit-transaction' : 'debit-transaction' ]">
                                         <td>{{ index+1 }}</td>
                                         <td>{{ transaction.description }}</td>
