--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -76,15 +76,17 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col">
-                        <h2 class="display-6 subtitle">Accounts</h2>
+                        <h2 class="display-6 subtitle">Accounts  </h2>
+                        <button v-if="clientInfo.accounts != null && clientInfo.accounts.length < 3"
+                                v-on:click="create" id="create" class="btn btn-sm btn-success"> Create new account </button>
                     </div>
                     <div class="row mx-2">
-                        <div v-for="{id, number, creationDate, balance} in clientInfo.accounts"
+                        <div v-for="{id, accountNumber, creationDate, balance} in clientInfo.accounts"
                              class="col-12 col-md-4 mt-2 ">
                             <a class="account-link" v-bind:href="'/web/account.html?id='+id">
                                 <div class="card border-0 account">
                                     <div class="card-body">
-                                        <h5 class="card-title">{{ number }}</h5>
+                                        <h5 class="card-title">{{ accountNumber }}</h5>
                                         <p class="card-text"> {{ formatDate(creationDate) }}</p>
                                         <p class="text-center lead account-balance"> ${{ balance }} </p>
                                     </div>
@@ -92,6 +94,7 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="row mt-3">
                         <div class="col">
                             <h2 class="display-6">Loans</h2>
